[gd_scene load_steps=14 format=2]

[ext_resource path="res://Menus/Menubutton/Button.png" type="Texture" id=1]
[ext_resource path="res://Resources/Fonts/agencyfb-boldcondensed.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menus/Menubutton/LevelSelectButton.gd" type="Script" id=3]
[ext_resource path="res://Resources/Audio/Effects/MenuButtonHoverOn.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/Audio/Effects/MenuButtonHoverOff.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/Audio/Effects/MenuButtonClick.wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.929412, 0.94902, 0.956863, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.552941, 0.6, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.552941, 0.6, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.929412, 0.94902, 0.956863, 1 )

[sub_resource type="DynamicFont" id=5]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[node name="LevelSelectButton" type="Button"]
margin_right = 84.0
margin_bottom = 81.0
rect_min_size = Vector2( 84, 0 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.168627, 0.176471, 0.258824, 1 )
custom_colors/font_color = Color( 0.168627, 0.176471, 0.258824, 1 )
custom_colors/font_color_hover = Color( 0.168627, 0.176471, 0.258824, 1 )
custom_colors/font_color_pressed = Color( 0.929412, 0.94902, 0.956863, 1 )
text = "00"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
color_border = Color( 0.168627, 0.176471, 0.258824, 1 )
border_width = 30
border_width_grow = 50
border_width_click = 60
hardcore_color_border = Color( 0.137255, 0.937255, 0.470588, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="BorderSprite" type="Sprite" parent="."]
modulate = Color( 0.168627, 0.176471, 0.258824, 1 )
position = Vector2( 42, 40.5 )
scale = Vector2( 1.78125, 1.73438 )
z_index = -1
texture = ExtResource( 1 )

[node name="MenuButtonHoverOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0
bus = "Effects"

[node name="MenuButtonHoverOff" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
bus = "Effects"

[node name="MenuButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
bus = "Effects"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
margin_right = 84.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.937255, 0.137255, 0.235294, 1 )
text = "Best Time"
align = 1
valign = 2

[node name="TimeLabel" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 42.0
margin_right = 84.0
margin_bottom = 81.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.937255, 0.137255, 0.235294, 1 )
text = "01:01.000"
align = 1
[connection signal="button_down" from="." to="." method="_on_MenuButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_MenuButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_MenuButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MenuButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_MenuButton_pressed"]
